--- a/style.css
+++ b/style.css
@@ -19,11 +19,14 @@
 
 body {
   font-family: var(--font2);
+  min-height: 100vh;
+  background: linear-gradient(180deg, rgba(227, 255, 248, 0.00) 0%, rgba(227, 255, 248, 0.38) 100%);
 }
 
 .page {
   width: 1000px;
-  margin: 65px auto 0;
+  margin: 0 auto;
+  padding-top: 65px;
 }
 
 nav {
@@ -46,7 +49,12 @@ a {
   color: var(--cor3);
 }
 
+ul li a {
+  opacity: 0.5;
+}
+
 ul li a:hover {
+  opacity: 1;
   font-weight: bold;
 }
 
